Name:                CLUtil
Version:             0.7
Synopsis:            A thin abstraction layer over the OpenCL library.
Description:         Medium level abstractions for working with OpenCL. OpenCL kernels are still written in the OpenCL language, but interfacing with Haskell types is simplified and the most common uses are streamlined.
Homepage:            http://github.com/acowley/CLUtil
License:             BSD3
License-file:        LICENSE
Author:              Anthony Cowley
Maintainer:          acowley@gmail.com
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2

Extra-Source-Files: examples/QuasiCrystalDisplay.hs, 
                    examples/QuasiCrystalRGBA.cl,
                    examples/TestEZ.hs,
                    examples/VecEZ.cl,
                    examples/VecEZ2.cl

Library
  Exposed-modules:     Control.Parallel.CLUtil,
                       Control.Parallel.CLUtil.CL,
                       Control.Parallel.CLUtil.Buffer,
                       Control.Parallel.CLUtil.Image,
                       Control.Parallel.CLUtil.KernelArgsCL,
                       Control.Parallel.CLUtil.KernelArgsCLAsync,
                       Control.Parallel.CLUtil.ProgramCache,
                       Control.Parallel.CLUtil.BufferImageInterop,
                       Control.Parallel.CLUtil.Async,
                       Control.Parallel.CLUtil.State,
                       Control.Parallel.CLUtil.Load,
                       Control.Parallel.CLUtil.Initialization,
                       Control.Parallel.CLUtil.VectorBuffers,
                       Control.Parallel.CLUtil.KernelArgTypes
  HS-Source-Dirs:      src
  Build-depends:       base >= 4.6,
                       bytestring,
                       containers,
                       lens >= 3.9,
                       mtl,
                       tagged >= 0.6.1,
                       transformers >= 0.3,
                       vector >= 0.7,
                       OpenCL >= 1.0.3

                       
